--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .catkin_workspace
-.idea/vcs.xml
+.idea/*
 build/
 devel/
 install/
@@ -7,3 +7,4 @@ equinor_hackathon_px4/
 PX4_2017/
 Task2/Data/
 Task2/unlabeledData/
+.DS_Store
